Prevent stretch images.

--- a/app/account/styles/_card-detail.styl
+++ b/app/account/styles/_card-detail.styl
@@ -6,6 +6,15 @@
   cursor: inherit;
 }
 
+.card.is-detail[data-type="file"] {
+  text-align: center;
+
+  .card-preview {
+    height: auto;
+    width: auto;
+  }
+}
+
 .card.is-detail[data-type="note"] {
   &.is-editing {
     .card-content {
